# ddb-single-table-example

./: load.py  pyproject.toml  query.py
