[tool.poetry]
name = "ddb-single-table-example"
version = "0.1.0"
description = ""
authors = ["Mohammad Taleb <T@lebbits.com>"]

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
